feature/wise-0018 - Adjust order and item saving method