@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +23,7 @@ public class CreateOrderItemsUseCase {
                         null,
                         order
                 )
-        ).collect(Collectors.toList());
+        ).toList();
 
         return orderItemGateway.saveAll(orderItems);
     }
